Implemented the output of rooms on the application page:
- I import an array of rooms into the application
- for each room I add a row and table cells based on the room data
- added "elt" function to create DOM nodes

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <title>Docapp Test Task</title>
 </head>
 <body>
-  <div id="app"></div>
+	<div id="app" class="table-responsive p-3">
+		<table class="table">
+			<thead class="thead-dark">
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Code</th>
+					<th scope="col">Name</th>
+					<th scope="col">Status</th>
+					<th scope="col">Start time</th>
+					<th scope="col">Waiting time</th>
+					<th scope="col">Doctor</th>
+					<th scope="col">Assistant</th>
+		            <th scope="col"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<!-- <tr>
+					<th scope="row">1</th>
+					<td>Mark</td>
+					<td>Otto</td>
+					<td>@mdo</td>
+				</tr> -->
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
